<resources>
    <string name="app_name">Skuyy</string>
    <string name="signin">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="create_new_label">Buat Akun Baru</string>
    <string name="email_label">Email Address</string>
    <string name="continue_label">Continue</string>
    <string name="selfi_label">Selfie Time</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Passionmu ?</string>
    <string name="explore_label">JELAJAHI SEKARARANG</string>
    <string name="todo">todo</string>
    <string name="awesome_label">You Awesome</string>
    <string name="welcome_label">Welcome to Skuyy \nand enjoy your tour</string>
    <string name="new_account_label">New Account</string>
    <string name="fill_label">Silahkan isi form dibawah ini \nuntuk informasi</string>
    <string name="selfie_message_label">Biarkan dunia mengenal diri anda lebih baik \ndan lebih lama</string>
    <string name="plus_label">+</string>
    <string name="dashboard_label">My Dashboard</string>
    <string name="name_view_label">Yahya Nahnul Saputro</string>
    <string name="traveler_label">Traveller</string>
    <string name="balance_label">$ 120</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="explore_beauty_label">Jelajahi keindahan malang dan pasuruan</string>
    <string name="ticket_label">TicketTips</string>
    <string name="learn_label">Pelajari untuk banyak manfaat</string>
    <string name="buy_label">Buy Ticket</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="subtitle_edit_profile">Kami sangat menyarankan Anda untuk menggunakan \ninformasi yang benar</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="pantai">Pantai</string>
    <string name="saygon">saygon</string>
    <string name="air_terjun">Air Terjun</string>
    <string name="paralayang">Paralayang</string>
    <string name="dino_park">Dino Park</string>
    <string name="kebun_raya">Kebun Raya</string>
    <string name="my_ticket">My Ticket</string>
    <string name="subtitle_myticket">Jelajahi Keindahan Dunia</string>
    <string name="sign_out">Sign Out</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="subtitle_splash">Becomes More Fun \nWith Skuyy</string>
    <string name="view_ticket">View Ticket</string>
    <string name="my_dashboard">my dashboard</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="subtitle_buy_ticket">Periksa jumlah tiket</string>
    <string name="pricing">Pricing</string>
    <string name="current_balance">Saldo Anda saat ini adalah</string>
    <string name="total_price">Total Price</string>
    <string name="pay_now">PAY NOW</string>
    <string name="subtitle_ticket_detail">Ketahui sebelum berlibur</string>
    <string name="information">Information</string>
    <string name="take_img">ambil foto sepuasnya</string>
    <string name="subtitle_content">Berlibur menjadi lebih terasa dengan adanya wifi</string>
    <string name="dance_and_foods">Tersedia banyak menu restoran dan hiburan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
