<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgprimary"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="192dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:background="@drawable/bg_btn_white_primary"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview">

        <LinearLayout
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/xusername"
                        android:fontFamily="@font/mmedium"
                        android:textColor="@color/blackprimary"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:lines="1"
                        android:hint="@string/username_label"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="LabelFor"/>
                </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/xpassword"
                android:inputType="textPassword"
                android:fontFamily="@font/mmedium"
                android:textColor="@color/blackprimary"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:lines="1"
                android:hint="@string/password_label"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            style="@style/btn_blue_primary"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_sign_in"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="18dp"
            android:text="@string/signin"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mlight"
        android:text="@string/create_new_label"
        android:textColor="#3A3939"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.804" />

</androidx.constraintlayout.widget.ConstraintLayout>